[package]
name = "business-management-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
tokio-postgres = "0.7.10"
tokio = { version = "1", features = ["full"] }
serde_derive = "1.0.197"
serde = "1.0.197"

